lint-staged completed

--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "start": "node ./src/index.ts",
     "dev": "nodemon ./src/index.ts",
     "format": "prettier --write './src/**/*.ts'",
+    "lint": "eslint --fix './src/**/*.ts'",
     "prepare": "husky install"
+  },
+  "lint-staged":{
+    "src/**/*.{ts,js}":[ "prettier --write" ],
+    "src/**/*.{ts,js,json,css,scss,md}":[ "eslint --fix" ]
   },
   "keywords": [],
   "author": "MCT",
