--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,13 +6,14 @@
     "extends": ["eslint:recommended", "plugin:node/recommended", "prettier"],
     "overrides": [
     ],
-    "plugins": ["prettier"],
+    "plugins": ["prettier","@typescript-eslint"],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
+    "parser": "@typescript-eslint/parser",
     "rules": {
-        "@typescript-eslint/no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "error",
         "@typescript-eslint/no-non-null-assertion": "off"
     }
 }
