--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "lint": "eslint --fix './src/**/*.ts'",
     "prepare": "husky install"
   },
-  "lint-staged":{
-    "src/**/*.{ts,js}":[ "prettier --write" ],
-    "src/**/*.{ts,js,json,css,scss,md}":[ "eslint --fix" ]
+  "lint-staged": {
+    "src/**/*.{ts,js}": [
+      "prettier --write"
+    ],
+    "src/**/*.{ts,js,json,css,scss,md}": [
+      "eslint --fix"
+    ]
   },
   "keywords": [],
   "author": "MCT",
@@ -30,8 +34,12 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "nodemon": "^3.0.1",
