vercel config changed

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,11 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src":"./index.js",
-            "use": "@vercel/node"
-        }
+      { "src": "prisma/schema.prisma", "use": "@prisma/cli" },
+      { "src": "index.ts", "use": "@vercel/node" }
     ],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"/"
-        }
-    ]
-}
+    "routes": [{ "src": "/(.*)", "dest": "api/$1.ts" }],
+    "env": {
+      "PRISMA_DATABASE_URL": "mongodb+srv://mevlutcantuna:52600625@cluster0.4rtglm1.mongodb.net/server-for-blog-ft?retryWrites=true&w=majority"
+    }
+  }
