--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "start": "node ./index.js",
     "dev": "nodemon ./index.js",
+    "vercel-build": "tsc && prisma db push",
     "format": "prettier --write './**/*.js'",
     "lint": "eslint --fix './**/*.js'",
     "prepare": "husky install"
