--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,14 @@
 {
-    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
-}
+    "version": 2,
+    "builds": [
+      { "src": "index.ts", "use": "@vercel/node" }
+    ],
+    "routes": [
+      { "src": "/api/.*", "dest": "index.ts" },
+      { "src": "/(.*)", "dest": "index.ts" }
+    ],
+    "env": {
+      "DATABASE_URL": "mongodb+srv://mevlutcantuna:52600625@cluster0.4rtglm1.mongodb.net/server-for-blog-ft?retryWrites=true&w=majority"
+    }
+  }
+  
