vercel config updated

--- a/vercel.json
+++ b/vercel.json
@@ -4,8 +4,8 @@
       { "src": "src/index.ts", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/api/.*", "dest": "index.ts" },
-      { "src": "/(.*)", "dest": "index.ts" }
+      { "src": "/api/.*", "dest": ".src/index.ts" },
+      { "src": "/(.*)", "dest": ".src/index.ts" }
     ]
   }
   
