vercel config updated

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     ],
     "routes": [
       { "src": "/api/.*", "dest": ".src/index.ts" },
-      { "src": "/(.*)", "dest": ".src/index.ts" }
+      { "src": "/src/(.*)", "dest": ".src/index.ts" }
     ]
   }
   
