--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,10 @@
 {
-    "version": 2,
-    "builds": [
-      { "src": "src/index.ts", "use": "@vercel/node" }
-    ],
-    "routes": [
-      { "src": "/api/.*", "dest": ".src/index.ts" },
-      { "src": "/src/(.*)", "dest": ".src/index.ts" }
-    ]
-  }
-  
+  "version": 2,
+  "builds": [
+    { "src": "index.ts", "use": "@vercel/node" }
+  ],
+  "routes": [
+    { "src": "/api/.*", "dest": "index.ts" },
+    { "src": "/(.*)", "dest": "index.ts" }
+  ]
+}
