--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,8 @@
     },
     "parser": "@typescript-eslint/parser",
     "rules": {
-        "@typescript-eslint/no-unused-vars": "error",
-        "@typescript-eslint/no-non-null-assertion": "off"
+        "@typescript-eslint/no-unused-vars": "warn",
+        "@typescript-eslint/no-non-null-assertion": "off",
+        "no-unused-vars":"warn"
     }
 }
