--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "prisma": "^5.0.0",
     "ts-node": "^10.9.1"
   },
-  "type": "module",
+  "type": "commonjs",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
