--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "node ./src/index.ts",
+    "start": "tsc ./src/index.ts",
     "dev": "nodemon ./src/index.ts",
     "format": "prettier --write './src/**/*.{ts,js,json,css,scss,md}'",
     "lint": "eslint --fix './src/**/*.{ts,js}'",
@@ -35,7 +35,7 @@
     "prisma": "^5.0.0",
     "ts-node": "^10.9.1"
   },
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.13",
