--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,14 @@
     "lib": ["ES6"],                                       
     "module": "NodeNext",                                
     "sourceMap": true,                            
-    "outDir": "dist",                                   
+    "outDir": "ts-built",
+    "rootDir": "src",                                   
+    "allowImportingTsExtensions": true,
     "esModuleInterop": true,                            
     "forceConsistentCasingInFileNames": true,            
     "strict": true,                                     
     "skipLibCheck": true,
     "noEmit": true,
-    "allowImportingTsExtensions": true
   },
   "include": ["./**/*.ts"],
   "exclude": ["node_modules", "**/*.spec.ts"],
