--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
   "builds": [
-    { "src": "src/index.ts", "use": "@vercel/node" }
+    { "src": "src/index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/.*", "dest": "src/index.ts" },
-    { "src": "/(.*)", "dest": "src/index.ts" }
+    { "src": "/api/.*", "dest": "src/index.js" },
+    { "src": "/(.*)", "dest": "src/index.js" }
   ]
 }
