auth routes changed

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "dev": "nodemon ./src/index.js",
     "format": "prettier --write './src/**/*.{ts,js,json,css,scss,md}'",
     "lint": "eslint --fix './src/**/*.{ts,js}'",
-    "prepare": "husky install",
-    "vercel-build": "node ./src/index.js && npx prisma generate"
+    "prepare": "husky install"
   },
   "lint-staged": {
     "./src/**/*.{ts,js}": [
