ts config files are changed

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "scripts": {
     "start": "node ./src/index.ts",
     "dev": "nodemon ./src/index.ts",
+    "build": "rimraf dist && tsc",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
     "format": "prettier --write './src/**/*.{ts,js,json,css,scss,md}'",
     "lint": "eslint --fix './src/**/*.{ts,js}'",
     "prepare": "husky install",
@@ -22,6 +25,11 @@
       "eslint --fix"
     ]
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "keywords": [],
   "author": "MCT",
   "license": "MIT",
@@ -51,7 +59,9 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.3",
     "nodemon": "^3.0.1",
+    "pre-commit": "^1.2.2",
     "prettier": "^3.0.0",
+    "rimraf": "^5.0.1",
     "typescript": "^5.1.6"
   }
 }
