ts config files are changed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,7 @@
     "lib": ["ES6"],                                       
     "module": "NodeNext",                                
     "sourceMap": true,                            
-    "outDir": "ts-built",
-    "rootDir": "src",                                   
+    "outDir": "./dist",
     "allowImportingTsExtensions": true,
     "esModuleInterop": true,                            
     "forceConsistentCasingInFileNames": true,            
